2001-04-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Fixes for string capitalisation in
	key-value methods.

2001-04-23  Adam Fedor  <fedor@gnu.org>

	* configure.in: Simplify NeXT checks.
	* Headers/gnustep/base/NSLock.h: Fix NeXT_RUNTIME typo.
	* Headers/gnustep/base/objc-gnu2next.h: Change *_EXPORT to extern
	* Source/o_vscanf.c: include objc-gnu2next.h
	* Source/NSConnection.m: Fix test for NeXT_RUNTIME define.
	* Source/NSDistantObject.m: Likewise.
	* Source/callframe.m: Likewise.
	* Source/cifframe.m: Likewise.
	* Source/mframe.m: Likewise.

2001-04-24   Nicola Pero  <n.pero@mi.flashnet.it>

	* Testing/benchmark.m (bench_object): Use a choice of the 10 more
	used classes when benchmarking class method invocation, rather
	than always using `NSObject'.  Added bench for NSClassFromString.

2001-04-23  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/GSValue.m ([-getValue:]): Fixed typo - was raising
	exception on non-NULL buffer rather than NULL.

2001-04-23  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSBundle.m ([+initialize]): Fixed segmentation fault when
	NSSearchPathForDirectoriesInDomains returns an empty array.  This
	used to appear when GNUSTEP_SYSTEM_ROOT was unset.
	* Source/NSUser.m (NSSearchPathForDirectoriesInDomains): Read
	GNUSTEP_SYSTEM_ROOT, GNUSTEP_LOCAL_ROOT, GNUSTEP_NETWORK_ROOT and
	GNUSTEP_USER_ROOT only once, then cache them.  Do not crash if
	some of them are nil.  If GNUSTEP_SYSTEM_ROOT is nil, fprintf a
	log message, and try using /usr/GNUstep/System.  Use new ADD_PATH
	macro to simplify code.  Autorelease returned array which was
	previously leaked.

2001-04-22  Georg Fleischmann

	* Source/GSAttributedString.m:
	([replaceCharactersInRange:withString:])
	recalculate effective range after removing attributes.

2001-04-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLocale.m: Only call setlocale() in GSSetLocaleC()
	* Source/NSObject.m: ([+initialize]) call GSSetLocaleC() after other